Debugging slowdowns